# SemanticSQL

./: .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
app/api/: __init__.py  connections.py  endpoints.py  query.py
app/config/: config.py
app/db/: database.py
app/models/: connection_models.py  requests.py  responses.py  schema_models.py
app/services/: background_service.py  connection_service.py  database_service.py  db_connector.py  embedder.py  embedding_service.py  metadata_extractor.py  query_generator.py  query_service.py  schema_service.py  vector_store.py
app/utils/: db_utils.py  embedding.py  llm.py  query_generator.py  schema_extractor.py  schema_manager.py  text_formatter.py
resources/: context.txt
